20000121-12:50 GMT+1 Ignacio Ortiz <ignacio@fivetech.com>
   + source/rtl/mlpos.c
     * Added function MlPos()

   * source/rtl/memoline.c
     * Fixed little bug on empty lines

   * source/rtl/tget.prg
     * Multiple enhancements, class Tget is completed

   * source/rtl/tgetlist.prg
     * Fixed bug on date management reported by Kwon OhChul

   * makefile.b32
     * mlpos.c included (Please update other make files)

20000121-09:40 GMT+1 Antonio Linares <alinares@fivetech.com>
   * source/debug/debugger.com
     * Improved monitored variables containt support

2000-01-20 14:15 GMT-5 David G. Holm <dholm@ sd-llc.com>

   * source/rtl/dates.c
     ! Corrected CTOD() to include 0 as a year subject to SET EPOCH
       (the range had been accidentally set to 1 through 99 instead
       of 0 through 99).

20000119-21:21 GMT+3 Alexander Kresin
  * source/pp/hbpp.c
    * Few bugs fixed, reported by Matteo Baccan and Dave Pearson

20000119-13:05 GMT+1 Ryszard Glab <rglab@imid.med.pl>

    *source/macro/macro.y
        * fixed GPF when IIF()/IF() was used in macro expression
        * support for TYPE() function was added

    *include/macro.h
    *source/macro/macro.c
        * support for TYPE() function was added
        * memory allocated for macro evaluation is properly released
        when a runtime error occurs during evaluation

    *source/rtl/type.c
        * full implementation of TYPE() function was added

    *include/extend.h
        * new declaration for hb_macroGetType - called from TYPE()
        * new declaration for hb_valtypeGet shared by VALTYPE and TYPE

    *source/rtl/valtype.c
        * new function hb_valtypeGet() used internally in Harbour

    *source/rtl/errorapi.c
    *include/errorapi.h
        * new structure HB_ERROR_INFO for catching errors at C level
        * new function hb_errorHandler() that sets/gets low-level
        error handler.

    *include/ctoharb.h
    *source/vm/hvm.c